--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "dotenv": "^16.3.1",
-    "@nestjs/platform-express": "^8.0.0",
-    "typeorm": "^0.3.17",
     "nestjs-telegraf": "^2.4.0",
+    "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "telegraf": "^4.7.0"
+    "telegraf": "^4.7.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
