--- a/package.json
+++ b/package.json
@@ -27,14 +27,20 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "nestjs-telegraf": "^2.4.0",
+    "path": "^0.12.7",
     "pg": "^8.11.1",
+    "read-excel-file": "^5.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "telegraf": "^4.7.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
