--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nestjs-telegraf": "^2.4.0",
     "path": "^0.12.7",
@@ -48,6 +49,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
