--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@vercel/postgres": "^0.4.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
