--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
 "version": 2,
 "name": "interviewBot",
+"builds": [
+  {
+    "src": "src/main.ts",
+    "use": "@vercel/node"
+  }
+],
 "routes": [
   {
     "src": "/(.*)",
