--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@nestjs/axios": "0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^10.0.5",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@vercel/postgres": "^0.4.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nestjs-telegraf": "^2.4.0",
